--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="src/styles.css" />
-
+    <script
+      src="https://kit.fontawesome.com/6f050148b5.js"
+      crossorigin="anonymous"
+    ></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
@@ -27,7 +30,9 @@
   </head>
   <body>
     <h1 class="bg-warning">Hello World</h1>
-    <a href="contact.html">Contact</a>
-    <a href="about.html">About</a>
+      <a href="contact.html">Contact</a>
+      <a href="about.html">About</a>
+    
+    </p>
   </body>
 </html>
