--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
       integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
       crossorigin="anonymous"
     />
-    <title>Document</title>
+    <title>Contact Me</title>
   </head>
   <body>
     <h1>contact</h1>
