Added fonts  & updated "hero" CSS

--- a/index.html
+++ b/index.html
@@ -26,13 +26,22 @@
       href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Inspiration&family=Poppins:ital,wght@1,300&family=Quintessential&family=Roboto:wght@300;400&display=swap"
       rel="stylesheet"
     />
-    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Inspiration&family=Playfair+Display&family=Poppins:ital,wght@0,300;0,500;1,300&family=Quintessential&family=Roboto:wght@300&display=swap" rel="stylesheet">
+    <title>Arava Kedem Protfolio</title>
   </head>
   <body>
-    <h1 class="bg-warning">Hello World</h1>
-      <a href="contact.html">Contact</a>
-      <a href="about.html">About</a>
-    
-    </p>
+
+<div class="hero">
+      <p>Hello I am</p>
+    <h1>Arava Kedem</h1>
+  </br>
+    <h2 class="mb-5">Front-End developer based in Toronto</h2>
+     <a href="#" class="btn btn-branding">Contact me</a>
+    </div>
+   
   </body>
 </html>
