--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="src/styles.css" />
-    <script src="https://kit.fontawesome.com/6f050148b5.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/60fa90ae3c.js" crossorigin="anonymous"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
@@ -33,16 +33,11 @@
   <body>
 
 <div class="hero">
-      <p>Hello I am</p>
-      <span>
-        <i class="fa-brands fa-apple"></i>
-      </span>
+      <p>👋 Hello I am</p>
     <h1>Arava Kedem</h1>
   </br>
- 
     <h2 class="mb-5">Front-End developer based in Toronto</h2>
-     <a href="#" class="btn btn-branding">Contact me</a>
-
+    <a href="#" class="btn-branding">Contact me</a>
     </div>
    
   </body>
