--- a/index.html
+++ b/index.html
@@ -31,14 +31,47 @@
     <title>Arava Kedem Protfolio</title>
   </head>
   <body>
-
 <div class="hero">
       <p>👋 Hello I am</p>
     <h1>Arava Kedem</h1>
   </br>
-    <h2 class="mb-5">Front-End developer based in Toronto</h2>
-    <a href="#" class="btn-branding">Contact me</a>
-    </div>
-   
+    <h2 class="mb-5">Frontend developer based in Toronto</h2>
+    <a href="contact.html" class="btn btn-branding">Contact me</a>
+      </div>
+      <p class="text-center md-5 pt-5 pb-3"> 
+    Lorem ipsum dolor sit amet consectetur adipisicing
+   </p>
+      <div class="container">
+<div class="row mb-5">
+<div class="col-6 d-none d-md-block">
+   <img class="img-fluid" src="src/img/yogurt.png" alt="yogurt breakfast"/>
+   </div>
+<div class="col-md-6">
+  <h2 class="yogurt-heading"> Yogurt Project</h2>
+  <p class="md-5" > Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel eos eveniet alias temporibus deserunt veritatis minima fugiat explicabo eum dolore. 
+  </p>
+  <a href="#" class="btn btn-yogurt">Learn More</a> 
+   </div>
+<div class="col-md-6">
+  <h2 class="weather-heading pt-4"> Weather Project</h2>
+  <p class="md-5 "> Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel eos eveniet alias temporibus deserunt veritatis minima fugiat explicabo eum dolore. 
+  </p>
+  <a href="#" class="btn btn-weather">Learn More</a>
+</div>
+<div class="col-6 d-none d-md-block">
+   <img class="img-fluid" src="src/img/weather.png" alt="weather app image"/>
+   </div>
+<div class="col-md-6 d-none d-md-block">
+   <img class="img-fluid" src="src/img/dictionary.png" alt="dictionaty app"/>
+   </div>
+<div class="col-md-6">
+  <h2 class="dictionary-heading pt-4"> Dictionary Project</h2>
+  <p class="md-5"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel eos eveniet alias temporibus deserunt veritatis minima fugiat explicabo eum dolore. 
+  </p>
+  <a href="#" class="btn btn-dictionary">Learn More</a> 
+</div>
+</div>
+</div>
+</div>
   </body>
 </html>
