Edited HTML and CSS
Added @media
Styled btn

--- a/about.html
+++ b/about.html
@@ -19,8 +19,26 @@
     />
   </head>
   <body>
-    <h1>About me</h1>
-    <a href="index.html">Home</a>
-    <a href="contact.html">Contact</a>
+    <div class="about-hero container">
+      <div class="row">
+        <div class="col-lg-6">
+          <div class="about-content">
+            <h1 class="mb-3">Hi, I am Arava Kedem</h1>
+            <h2 class="mb-3">Frontend Developer, baseed in Toronto</h2>
+            <p>
+              Lorem ipsum dolor sit amet. Ut soluta quos est harum aliquid et
+              rerum dicta qui voluptas possimus vel maiores porro. Et enim odit
+              et inventore rerum aut ipsum aliquam At odit quis. Sit corrupti
+              internos hic alias voluptas ut recusandae veritatis? Sit
+              consectetur error a voluptas internos eos maiores amet.
+            </p>
+            <a href="index.html" class="btn btn-projects">See my projects</a>
+          </div>
+        </div>
+        <div class="col-lg-6">
+          <img src="src/img/personal.png" alt="woman face" class="img-fluid" />
+        </div>
+      </div>
+    </div>
   </body>
 </html>
