--- a/about.html
+++ b/about.html
@@ -19,10 +19,10 @@
     />
   </head>
   <body>
-    <div class="about-hero container">
+    <div class="content-container container">
       <div class="row">
         <div class="col-lg-6">
-          <div class="about-content">
+          <div class="content">
             <h1 class="mb-3">Hi, I am Arava Kedem</h1>
             <h2 class="mb-3">Frontend Developer, baseed in Toronto</h2>
             <p>
