--- a/index.html
+++ b/index.html
@@ -73,7 +73,8 @@
 </div>
 </div>
 </div>
-<a href="about.html">about page
+<a href="about.html">About me</a>
+<a href="work.html">My work</a>
 
 </a>
   </body>
