Edited contact page  links

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
   <h2 class="yogurt-heading"> Yogurt Project</h2>
   <p class="md-5" > Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel eos eveniet alias temporibus deserunt veritatis minima fugiat explicabo eum dolore. 
   </p>
+  <div class="links">
   <a href="#" class="btn btn-yogurt">Learn More</a> 
    </div>
 <div class="col-md-6">
@@ -69,6 +70,7 @@
   <p class="md-5"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel eos eveniet alias temporibus deserunt veritatis minima fugiat explicabo eum dolore. 
   </p>
   <a href="#" class="btn btn-dictionary">Learn More</a> 
+</div>
 </div>
 </div>
 </div>
