--- a/contact.html
+++ b/contact.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Aboute Me</title>
     <link rel="stylesheet" href="src/styles.css" />
-
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
@@ -17,10 +17,26 @@
       integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
       crossorigin="anonymous"
     />
-    <title>Contact Me</title>
   </head>
   <body>
-    <h1>contact</h1>
-    <a href="index.html">Home </a>
+    <div class="content-container container">
+      <div class="content">
+        <h1 class="mb-4">Let's get in touch</h1>
+        <div class="container-links">
+          <h3>Email</h3>
+          <p>
+            <a href="mailto:ahorn.arava@gmail.com">ahorn.arava@gmail.com</a>
+          </p>
+          <h3>Twitter</h3>
+          <p>
+            <a href="https://twitter.com/?lang=en">@AravaKedem</a>
+          </p>
+          <h3>Instagram</h3>
+          <p>
+            <a href="https://www.instagram.com/accounts/login/">@ahron.arava</a>
+          </p>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
