--- a/work.html
+++ b/work.html
@@ -65,6 +65,8 @@
         </div>
       </div>
     </div>
-    <a href="index.html">Home</a>
+    <footer>
+      <a href="index.html">Home</a>
+    </footer>
   </body>
 </html>
