--- a/index.html
+++ b/index.html
@@ -31,6 +31,28 @@
     <title>Arava Kedem Protfolio</title>
   </head>
   <body>
+
+  <div class="container">
+    <nav class="d-flex justify-content-between">
+ <img src="src/img/logo.png" alt="SheCodes Logo" class="logo">
+<ul>
+<li class="active">
+  <a href="/">Home</a>
+</li>
+<li>
+  <a href="/about.html">About </a>
+</li>
+<li>
+ <a href="/work.html">Work</a> 
+</li>
+<li>
+  <a href="/contact.html">Contact</a>
+</li>
+</ul>
+</div>
+</nav>
+
+
 <div class="hero">
       <p>👋 Hello I am</p>
     <h1>Arava Kedem</h1>
@@ -50,7 +72,7 @@
   <h2 class="yogurt-heading"> Yogurt Project</h2>
   <p class="md-5" > Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel eos eveniet alias temporibus deserunt veritatis minima fugiat explicabo eum dolore. 
   </p>
-  <div class="links">
+
   <a href="#" class="btn btn-yogurt">Learn More</a> 
    </div>
 <div class="col-md-6">
@@ -75,9 +97,5 @@
 </div>
 </div>
 </div>
-<a href="about.html">About me</a>
-<a href="work.html">My work</a>
-
-</a>
   </body>
 </html>
