--- a/index.html
+++ b/index.html
@@ -73,13 +73,13 @@
   <p class="md-5" > Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel eos eveniet alias temporibus deserunt veritatis minima fugiat explicabo eum dolore. 
   </p>
 
-  <a href="#" class="btn btn-yogurt">Learn More</a> 
+  <a href="#" class="btn btn-branding">Learn More</a> 
    </div>
 <div class="col-md-6">
   <h2 class="weather-heading pt-4"> Weather Project</h2>
   <p class="md-5 "> Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel eos eveniet alias temporibus deserunt veritatis minima fugiat explicabo eum dolore. 
   </p>
-  <a href="#" class="btn btn-weather">Learn More</a>
+  <a href="#" class="btn btn-branding">Learn More</a>
 </div>
 <div class="col-6 d-none d-md-block">
    <img class="img-fluid" src="src/img/weather.png" alt="weather app image"/>
@@ -91,11 +91,17 @@
   <h2 class="dictionary-heading pt-4"> Dictionary Project</h2>
   <p class="md-5"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel eos eveniet alias temporibus deserunt veritatis minima fugiat explicabo eum dolore. 
   </p>
-  <a href="#" class="btn btn-dictionary">Learn More</a> 
+  <a href="#" class="btn btn-branding">Learn More</a> 
 </div>
 </div>
 </div>
 </div>
 </div>
+<footer>
+  <a href="mailto:ahron.arava@gmail.com" class="social-links">ahron.arava@gmail.com</a>
+  <i class="fa-brands fa-instagram"></i>
+  <i class="fa-brands fa-twitter"></i>
+  <i class="fa-brands fa-github"></i>
+</footer>
   </body>
 </html>
