--- a/index.html
+++ b/index.html
@@ -98,10 +98,20 @@
 </div>
 </div>
 <footer>
-  <a href="mailto:ahron.arava@gmail.com" class="social-links">ahron.arava@gmail.com</a>
-  <i class="fa-brands fa-instagram"></i>
-  <i class="fa-brands fa-twitter"></i>
-  <i class="fa-brands fa-github"></i>
+  <div class="d-flex justify-content-center mb-5">
+  <a href="mailto:ahron.arava@gmail.com" class="email-link">ahron.arava@gmail.com</a>
+  </div>
+  <div class="social-links d-flex justify-content-center">
+    <a href="">
+    <i class="fa-brands fa-instagram"></i>  
+    </a>
+    <a href="">
+       <i class="fa-brands fa-twitter"></i>
+    </a>
+    <a href="">
+     <i class="fa-brands fa-github"></i>  
+    </a>
 </footer>
+</div>
   </body>
 </html>
