--- a/index.html
+++ b/index.html
@@ -98,17 +98,26 @@
 </div>
 </div>
 <footer>
+  <div class="contact-box d-flex justify-content-between mb-5">
+    <div>
+<h3>Work Inuiry</h3>
+<p class="text-muted">Let's work together</p>
+</div>
+<div>
+<a href="" class="btn btn-branding">Contact me</a>
+</div>
+  </div>
   <div class="d-flex justify-content-center mb-5">
   <a href="mailto:ahron.arava@gmail.com" class="email-link">ahron.arava@gmail.com</a>
   </div>
   <div class="social-links d-flex justify-content-center">
-    <a href="">
+    <a href="https://www.instagram.com/">
     <i class="fa-brands fa-instagram"></i>  
     </a>
-    <a href="">
+    <a href="https://twitter.com/?lang=en">
        <i class="fa-brands fa-twitter"></i>
     </a>
-    <a href="">
+    <a href="https://github.com/">
      <i class="fa-brands fa-github"></i>  
     </a>
 </footer>
