--- a/index.html
+++ b/index.html
@@ -73,13 +73,13 @@
   <p class="md-5" > Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel eos eveniet alias temporibus deserunt veritatis minima fugiat explicabo eum dolore. 
   </p>
 
-  <a href="#" class="btn btn-branding">Learn More</a> 
+  <a href="#" class="btn btn-light">Learn More</a> 
    </div>
 <div class="col-md-6">
   <h2 class="weather-heading pt-4"> Weather Project</h2>
   <p class="md-5 "> Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel eos eveniet alias temporibus deserunt veritatis minima fugiat explicabo eum dolore. 
   </p>
-  <a href="#" class="btn btn-branding">Learn More</a>
+  <a href="#" class="btn btn-light">Learn More</a>
 </div>
 <div class="col-6 d-none d-md-block">
    <img class="img-fluid" src="src/img/weather.png" alt="weather app image"/>
@@ -91,7 +91,8 @@
   <h2 class="dictionary-heading pt-4"> Dictionary Project</h2>
   <p class="md-5"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel eos eveniet alias temporibus deserunt veritatis minima fugiat explicabo eum dolore. 
   </p>
-  <a href="#" class="btn btn-branding">Learn More</a> 
+  <a href="#" class="btn btn-light">Learn More</a>
+
 </div>
 </div>
 </div>
