--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
               internos hic alias voluptas ut recusandae veritatis? Sit
               consectetur error a voluptas internos eos maiores amet.
             </p>
-            <a href="index.html" class="btn btn-projects">See my projects</a>
+            <a href="index.html" class="btn btn-branding">See my projects</a>
           </div>
         </div>
         <div class="col-lg-6">
