--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Inspiration&family=Playfair+Display&family=Poppins:ital,wght@0,300;0,500;1,300&family=Quintessential&family=Roboto:wght@300&display=swap" rel="stylesheet">
-    <title>Arava Kedem Protfolio</title>
+<meta name="description" content="Arava is professionaly trained fron-end developer, based on Toronto Canada">
+    <title>Arava Kedem Front-end developer</title>
   </head>
   <body>
 
@@ -37,16 +38,16 @@
  <img src="src/img/logo.png" alt="SheCodes Logo" class="logo">
 <ul>
 <li class="active">
-  <a href="/">Home</a>
+  <a href="/" title="Homepage">Home</a>
 </li>
 <li>
-  <a href="/about.html">About </a>
+  <a href="/about.html" title="About Arava page">About </a>
 </li>
 <li>
- <a href="/work.html">Work</a> 
+ <a href="/work.html" title="Arava's projects">Work</a> 
 </li>
 <li>
-  <a href="/contact.html">Contact</a>
+  <a href="/contact.html" title="contact Arava">Contact</a>
 </li>
 </ul>
 </div>
@@ -66,32 +67,32 @@
       <div class="container">
 <div class="row mb-5">
 <div class="col-6 d-none d-md-block">
-   <img class="img-fluid" src="src/img/yogurt.png" alt="yogurt breakfast"/>
+   <img class="img-fluid" src="src/img/yogurt.png" alt="Yogurt project preview"/>
    </div>
 <div class="col-md-6">
   <h2 class="yogurt-heading"> Yogurt Project</h2>
   <p class="md-5" > Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel eos eveniet alias temporibus deserunt veritatis minima fugiat explicabo eum dolore. 
   </p>
 
-  <a href="#" class="btn btn-light">Learn More</a> 
+  <a href="/work.html" class="btn btn-light">Learn More</a> 
    </div>
 <div class="col-md-6">
   <h2 class="weather-heading pt-4"> Weather Project</h2>
   <p class="md-5 "> Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel eos eveniet alias temporibus deserunt veritatis minima fugiat explicabo eum dolore. 
   </p>
-  <a href="#" class="btn btn-light">Learn More</a>
+  <a href="/work.html" class="btn btn-light">Learn More</a>
 </div>
 <div class="col-6 d-none d-md-block">
-   <img class="img-fluid" src="src/img/weather.png" alt="weather app image"/>
+   <img class="img-fluid" src="src/img/weather.png" alt="Weather app preview"/>
    </div>
 <div class="col-md-6 d-none d-md-block">
-   <img class="img-fluid" src="src/img/dictionary.png" alt="dictionaty app"/>
+   <img class="img-fluid" src="src/img/dictionary.png" alt="Dictionaty app preview"/>
    </div>
 <div class="col-md-6">
   <h2 class="dictionary-heading pt-4"> Dictionary Project</h2>
   <p class="md-5"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel eos eveniet alias temporibus deserunt veritatis minima fugiat explicabo eum dolore. 
   </p>
-  <a href="#" class="btn btn-light">Learn More</a>
+  <a href="/work.html" class="btn btn-light">Learn More</a>
 
 </div>
 </div>
@@ -105,23 +106,26 @@
 <p class="text-muted">Let's work together</p>
 </div>
 <div>
-<a href="" class="btn btn-branding">Contact me</a>
+<a href="/contact.html" class="btn btn-branding">Contact me</a>
 </div>
   </div>
   <div class="d-flex justify-content-center mb-5">
-  <a href="mailto:ahron.arava@gmail.com" class="email-link">ahron.arava@gmail.com</a>
+  <a href="mailto:ahron.arava@gmail.com" class="email-link" title="email Arava">ahron.arava@gmail.com</a>
   </div>
   <div class="social-links d-flex justify-content-center">
-    <a href="https://www.instagram.com/">
+    <a href="https://www.instagram.com/" target="_blank" alt="Instagram link">
     <i class="fa-brands fa-instagram"></i>  
     </a>
-    <a href="https://twitter.com/?lang=en">
+    <a href="https://twitter.com/?lang=en" target="_blank" alt="Twitter link">
        <i class="fa-brands fa-twitter"></i>
     </a>
-    <a href="https://github.com/">
+    <a href="https://github.com/" target="_blank" title="GitHub link">
      <i class="fa-brands fa-github"></i>  
     </a>
 </footer>
+<p class="text-center mt-5">
+  This page was coded by Arava Kedem, and it is open sourced
+</p>
 </div>
   </body>
 </html>
