--- a/work.html
+++ b/work.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Aboute Me</title>
+    <title>Arava's projects</title>
     <link rel="stylesheet" href="src/styles.css" />
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
@@ -19,6 +19,39 @@
     />
   </head>
   <body>
+
+     <div class="container">
+    <nav class="d-flex justify-content-between">
+ <img src="src/img/logo.png" alt="SheCodes Logo" class="logo">
+<ul>
+<li>
+  <a href="/" title="Homepage">Home</a>
+</li>
+<li>
+  <a href="/about.html" title="About Arava page">About </a>
+</li>
+<li class="active">
+ <a href="/work.html" title="Arava's projects">Work</a> 
+</li>
+<li>
+  <a href="/contact.html" title="contact Arava">Contact</a>
+</li>
+</ul>
+</div>
+</nav>
+
+
+
+
+
+
+
+
+
+
+
+
+
     <div class="content-container container">
       <div class="content">
         <h1 class="mb-4">My projects</h1>
