Edded footer in all pages

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
     </a>
 </footer>
 <p class="text-center mt-5">
-  This page was coded by Arava Kedem, and it is open sourced
+  This page was coded by Arava Kedem, and it is <a href="https://github.com/AravaaK/Protfolio-project" target="_blank">open sourced</a>
 </p>
 </div>
   </body>
