Made the website SEO friendly

--- a/about.html
+++ b/about.html
@@ -17,6 +17,11 @@
       integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
       crossorigin="anonymous"
     />
+      <link
+      href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Inspiration&family=Poppins:ital,wght@1,300&family=Quintessential&family=Roboto:wght@300;400&display=swap"
+      rel="stylesheet"
+    />
+     <script src="https://kit.fontawesome.com/60fa90ae3c.js" crossorigin="anonymous"></script>
   </head>
   <body>
 
@@ -76,13 +81,13 @@
   <a href="mailto:ahron.arava@gmail.com" class="email-link" title="email Arava">ahron.arava@gmail.com</a>
   </div>
   <div class="social-links d-flex justify-content-center">
-    <a href="https://www.instagram.com/" target="_blank" alt="Instagram link">
+    <a href="https://www.instagram.com/" target="_blank" alt="Instagram link" title="Instagram link">
     <i class="fa-brands fa-instagram"></i>  
     </a>
-    <a href="https://twitter.com/?lang=en" target="_blank" alt="Twitter link">
+    <a href="https://twitter.com/?lang=en" target="_blank" alt="Twitter link" title="Twitter link">
        <i class="fa-brands fa-twitter"></i>
     </a>
-    <a href="https://github.com/" target="_blank" title="GitHub link">
+    <a href="https://github.com/" target="_blank" alt="GitHub link" title="GitHub link">
      <i class="fa-brands fa-github"></i>  
     </a>
 </footer>
