--- a/contact.html
+++ b/contact.html
@@ -17,6 +17,11 @@
       integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
       crossorigin="anonymous"
     />
+      <link
+      href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Inspiration&family=Poppins:ital,wght@1,300&family=Quintessential&family=Roboto:wght@300;400&display=swap"
+      rel="stylesheet"
+    />
+     <script src="https://kit.fontawesome.com/60fa90ae3c.js" crossorigin="anonymous"></script>
   </head>
   <body>
 
@@ -39,11 +44,6 @@
 </ul>
 </div>
 </nav>
-
-
-
-
-
 
     <div class="content-container container">
       <div class="content">
