--- a/index.html
+++ b/index.html
@@ -113,13 +113,13 @@
   <a href="mailto:ahron.arava@gmail.com" class="email-link" title="email Arava">ahron.arava@gmail.com</a>
   </div>
   <div class="social-links d-flex justify-content-center">
-    <a href="https://www.instagram.com/" target="_blank" alt="Instagram link">
+    <a href="https://www.instagram.com/" target="_blank" alt="Instagram link" title="Instagram link">
     <i class="fa-brands fa-instagram"></i>  
     </a>
-    <a href="https://twitter.com/?lang=en" target="_blank" alt="Twitter link">
+    <a href="https://twitter.com/?lang=en" target="_blank" alt="Twitter link" title="Twitter link">
        <i class="fa-brands fa-twitter"></i>
     </a>
-    <a href="https://github.com/" target="_blank" title="GitHub link">
+    <a href="https://github.com/" target="_blank" alt="GitHub link" title="GitHub link">
      <i class="fa-brands fa-github"></i>  
     </a>
 </footer>
