added photo source

--- a/about.html
+++ b/about.html
@@ -63,6 +63,7 @@
         </div>
         <div class="col-lg-6">
           <img src="src/img/personal.png" alt="woman face" class="img-fluid" />
+          <p>Photo taken from SheCodes website</p>
         </div>
       </div>
     </div>
